--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 // Add your dependencies here
 
 dependencies {
-    api("com.github.GTNewHorizons:waila:1.6.5:dev")
-    api("com.github.GTNewHorizons:NotEnoughItems:2.5.3-GTNH:dev")
-
+    api("com.github.GTNewHorizons:waila:1.8.1:dev")
+    api("com.github.GTNewHorizons:NotEnoughItems:2.6.26-GTNH:dev")
+    compileOnly("com.github.GTNewHorizons:Mobs-Info:0.4.2-GTNH:dev")
 }
